fixed blurry logo

--- a/src/uiComponents/CFooter/_CFooter.scss
+++ b/src/uiComponents/CFooter/_CFooter.scss
@@ -21,12 +21,14 @@
       width: 340px;
 
       img {
-        width: 170px;
-        margin: 0 0 1em 0;
+        width: 50px;
       }
 
       .footer-text {
         font-family: $font-light;
+      }
+      .logo-text {
+        font-family: $font-bold;
       }
     }
   }
